# video-cutter

./: .gitmodules  Cargo.toml
.cargo/: config.toml
src/: main.rs  processing.rs  segment.rs  util.rs  video_rpc.rs  watch.rs
