[package]
name = "video_cutter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
copypasta = "0.8.1"
crossbeam-channel = "0.5.4"
eframe = { version = "0.18.0", features = ["persistence"] }
egui_extras = "0.18.0"
lru = "0.7.7"
minreq = "2.6.0"
once_cell = { version = "1.13.0", features = ["parking_lot"] }
parking_lot = "0.12.1"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
shell-words = "1.1.0"
winsafe = { version = "0.0.10", features = ["user", "shell"] }
